--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -12,7 +12,7 @@ screen.POST_PROCESSING=Post Processing
         option.EXPOSURE.comment=Increases the brightness of the image while preserving dark areas. You can also control this setting through the vanilla "Brightness" slider. No performance impact.
 
     option.DITHERING_MODE=Dithering
-        option.DITHERING_MODE.comment=Slightly randomizes pixel colors to get rid of ugly bands of color (for instance, ones visible in the sky) that form because your monitor can't display color precisely enough. On ➤ Minimal performance hit.
+        option.DITHERING_MODE.comment=Slightly randomizes pixel colors to get rid of ugly bands of color (for instance, ones visible in the sky) that form because your monitor can't display color precisely enough. Does not work with Render Quality > 1x.  On ➤ Minimal performance hit.
         value.DITHERING_MODE.0=No
         value.DITHERING_MODE.1=Yes
 
