Smoothed invisibility effect

--- a/shaders/TODO
+++ b/shaders/TODO
@@ -1,3 +1,5 @@
+Swinging lanterns, smooth invisibility, smooth boss battle
+
 Ores glow, but only when close
 
 Atmospheric fog changes based on biome
