renamed custom invisibility uniform

--- a/shaders/TODO
+++ b/shaders/TODO
@@ -1,4 +1,4 @@
-Swinging lanterns, smooth invisibility, smooth boss battle
+Swinging lanterns, smooth boss battle
 
 Ores glow, but only when close
 
