Isolate renderstage, glowing entity HDR support

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -270,6 +270,33 @@ screen.ADVANCED=Advanced
         value.SHADOW_DEBUG.true=Yes
         value.SHADOW_DEBUG.false=No
 
+    option.ISOLATE_RENDER_STAGE=Isolate
+        value.ISOLATE_RENDER_STAGE.-1=Off
+        value.ISOLATE_RENDER_STAGE.0=Unknown
+        value.ISOLATE_RENDER_STAGE.1=Sky
+        value.ISOLATE_RENDER_STAGE.2=Sunset
+        value.ISOLATE_RENDER_STAGE.3=Custom Sky
+        value.ISOLATE_RENDER_STAGE.4=Sun
+        value.ISOLATE_RENDER_STAGE.5=Moon
+        value.ISOLATE_RENDER_STAGE.6=Stars
+        value.ISOLATE_RENDER_STAGE.7=Void
+        value.ISOLATE_RENDER_STAGE.8=Solid Terrain
+        value.ISOLATE_RENDER_STAGE.9=Cutout Mipped Terrain
+        value.ISOLATE_RENDER_STAGE.10=Cutout Terrain
+        value.ISOLATE_RENDER_STAGE.11=Entities
+        value.ISOLATE_RENDER_STAGE.12=Block Entities
+        value.ISOLATE_RENDER_STAGE.13=Block Break Animation
+        value.ISOLATE_RENDER_STAGE.14=Block Select Outline
+        value.ISOLATE_RENDER_STAGE.15=Debug Outlines
+        value.ISOLATE_RENDER_STAGE.16=Opaque Held Item
+        value.ISOLATE_RENDER_STAGE.17=Transparent Terrain
+        value.ISOLATE_RENDER_STAGE.18=Tripwire
+        value.ISOLATE_RENDER_STAGE.19=Particles
+        value.ISOLATE_RENDER_STAGE.20=Clouds
+        value.ISOLATE_RENDER_STAGE.21=Weather
+        value.ISOLATE_RENDER_STAGE.22=World Border
+        value.ISOLATE_RENDER_STAGE.23=Transparent Held Item
+
     option.SHADOW_TRANSITION_MIXING=Sunset Shadow Mixing
         option.SHADOW_TRANSITION_MIXING.comment=To increase performance, shadows are only calculated for the sun §oor§r moon, never both. To prevent an awkward "pop-in" effect as the shadows are switched from sun to moon and vice versa, the lighting is briefly switched to its shadowless version during sunset. This setting controls whether the terrain looks like it's in shadow (Shadowed) during this period.
         value.SHADOW_TRANSITION_MIXING.1=Unshadowed
