--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -58,10 +58,10 @@ screen.LIGHTING=Lighting
         option.AMBIENT_LIGHT_MULT=Ambient Light
             option.AMBIENT_LIGHT_MULT.comment=Sets the ambient light level. This is similar to minimum light, but affects all areas of the game, not just the darkest ones.
 
-        option.REAL_LIGHTING=Realistic Light Strengths
-            option.REAL_LIGHTING.comment=BETA!. This feature is in beta and won't look good. Sets light levels to their real-life values. No performance impact.
-            value.REAL_LIGHTING.true=Yes
-            value.REAL_LIGHTING.false=No
+        option.DYNAMIC_EXPOSURE_LIGHTING=Realistic Light Strengths
+            option.DYNAMIC_EXPOSURE_LIGHTING.comment=BETA!. This feature is in beta and won't look good. Sets light levels to their real-life values. No performance impact.
+            value.DYNAMIC_EXPOSURE_LIGHTING.true=Yes
+            value.DYNAMIC_EXPOSURE_LIGHTING.false=No
 
         option.SUN_LIGHT_MULT_USER=Sunlight
             option.SUN_LIGHT_MULT_USER.comment=Strength of direct sunlight during the day.
