--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -271,6 +271,7 @@ screen.ADVANCED=Advanced
         value.SHADOW_DEBUG.false=No
 
     option.ISOLATE_RENDER_STAGE=Isolate
+        option.ISOLATE_RENDER_STAGE.comment=Isolating red items is considered cheating!. Using this on servers may get you banned!
         value.ISOLATE_RENDER_STAGE.-1=Off
         value.ISOLATE_RENDER_STAGE.0=Unknown
         value.ISOLATE_RENDER_STAGE.1=Sky
@@ -283,8 +284,8 @@ screen.ADVANCED=Advanced
         value.ISOLATE_RENDER_STAGE.8=Solid Terrain
         value.ISOLATE_RENDER_STAGE.9=Cutout Mipped Terrain
         value.ISOLATE_RENDER_STAGE.10=Cutout Terrain
-        value.ISOLATE_RENDER_STAGE.11=Entities
-        value.ISOLATE_RENDER_STAGE.12=Block Entities
+        value.ISOLATE_RENDER_STAGE.11=§cEntities
+        value.ISOLATE_RENDER_STAGE.12=§cBlock Entities
         value.ISOLATE_RENDER_STAGE.13=Block Break Animation
         value.ISOLATE_RENDER_STAGE.14=Block Select Outline
         value.ISOLATE_RENDER_STAGE.15=Debug Outlines
