Further improved weather

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -255,7 +255,7 @@ screen.MISC=Misc
 
     option.LIGHTNING_FLASHES=Lighning Flash Intensity
         option.LIGHTNING_FLASHES.comment=Lights up the environment when lightning strikes. Disabled if "Hide Lightning Flashes" is ON in vanilla accessibility settings. §cMay trigger epilepsy!
-        value.LIGHTNING_FLASHES.0.0=None
+        value.LIGHTNING_FLASHES.0.0=Off
 
     option.NOISY_LAVA=Lava Variation
         option.NOISY_LAVA.comment=Makes some spots of lava darker and others brighter. Helps break up the lava texture, especially in large pools such as in the nether.
